Promo code button alignment issur fixed

--- a/frontend/src/pages/CheckoutPage.css
+++ b/frontend/src/pages/CheckoutPage.css
@@ -103,6 +103,7 @@ form {
 .total {
   font-weight: bold;
   margin-top: 20px;
+  margin-bottom: 20px;
   text-align: left;
 }
 
@@ -111,11 +112,11 @@ form {
   color: white;
   border: none;
   border-radius: 6px;
-  padding: 0.7rem 2rem;
+  padding: 0.5rem 2rem;
   font-weight: bold;
   font-size: 1rem;
   cursor: pointer;
-  margin-top: 1rem;
+  margin-top: 0.8rem;
   transition: background 0.2s, transform 0.2s;
   display: block;
   margin-left: auto;
@@ -126,10 +127,6 @@ form {
   transform: scale(1.03);
 }
 
-.place-order {
-  /*margin-left: 58px;*/
-}
-
 
 .promo-code input {
   padding: 8px;
@@ -138,7 +135,6 @@ form {
   width: 98%;
   text-align: left;
 }
-
 
 @media (max-width: 768px) {
   .checkout-page {
@@ -159,13 +155,13 @@ form {
   background-color: #317ab5ff;
   align-self: center;
   max-width: 70%;;
-  padding: 10px 20px;
+  padding: 7px 20px;
   border: none;
   border-radius: 4px;
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
-  margin-top: 10px;
+  margin-top: 0px;
 }
 
 .checkout-page button:hover {
